# ollama-modelfiles

./: .gitignore  .rumdl.toml  .task_plan.md  AGENTS.md  CLAUDE.md  Modelfile.diffusiongemma  Modelfile.gemma4-12b-it-obliterated  Modelfile.gemma4-12b-it-qat  Modelfile.gemma4-12b-it-uncensored  Modelfile.gemma4-26b-a4b-it-heretic-i1-q4-k-m  Modelfile.gemma4-26b-a4b-it-heretic-q4-k-m  Modelfile.gemma4-26b-a4b-it-heretic-q5-k-m  Modelfile.gemma4-26b-a4b-it-qat  Modelfile.qwen3.5-9b-coding-q4-k-m  Modelfile.qwen3.5-9b-coding-ud-q4-k-xl  Modelfile.qwen3.5-9b-mtp-coding-ud-q4-k-xl  Modelfile.qwen3.5-queen-27b-coding-q4-k-m  Modelfile.qwen3.6-27b-coding  Modelfile.qwen3.6-27b-coding-iq4-xs  Modelfile.qwen3.6-27b-coding-ud-q4-k-xl  Modelfile.qwen3.6-27b-mtp-coding  Modelfile.qwen3.6-27b-mtp-coding-iq4-xs  Modelfile.qwen3.6-27b-mtp-coding-ud-q4-k-xl  Modelfile.qwen3.6-27b-obliterated  Modelfile.qwen3.6-27b-obliterated-coding  Modelfile.qwen3.6-27b-obliterated-coding-q4-k-m  Modelfile.qwen3.6-27b-obliterated-q4-k-m  Modelfile.qwen3.6-35b-a3b-abliterated-q4-k  Modelfile.qwen3.6-35b-a3b-claude4.7-abliterated-q4-k  Modelfile.qwen3.6-35b-a3b-coding  Modelfile.qwen3.6-35b-a3b-coding-ud-iq4-xs  Modelfile.qwen3.6-35b-a3b-coding-ud-q4-k-xl  Modelfile.qwen3.6-35b-a3b-mtp-coding  Modelfile.qwen3.6-35b-a3b-mtp-coding-ud-iq4-xs  Modelfile.qwen3.6-35b-a3b-mtp-coding-ud-q4-k-xl  Modelfile.qwen3.6-35b-a3b-uncensored-hauhaucs-aggressive-iq4-xs  Modelfile.qwopus3.5-9b-coder-q4-k-m  README.md  benchmark-9b-coders.matrix.tsv  benchmark-all.sh  (+15 more)
.claude/: settings.json
benchmarks/: all.sh  common.sh  (+1 more)
(+83 files in other folders)
